--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -13,8 +13,13 @@
         <!--script src="js/less-1.3.3.min.js"></script-->      
         <!--append watch to the browser URL, then refresh the page. -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/libs/slider/powerange.css' %}" rel="stylesheet">
         <!--<link href="{% static 'css/libs/slider.css' %}" rel="stylesheet">-->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">  
+        <link rel="stylesheet" href="{% static 'css/powermain.css' %}" />
+        <link href="http://fonts.googleapis.com/css?family=Maven+Pro:400" rel="stylesheet" type="text/css" />   
+        <link href="http://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet" type="text/css" />
+        <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css" />
         <!--<link href="{% static 'css/libs/jquery-ui-1.10.0.custom.css' %}" rel="stylesheet">  
         <link href="{% static 'css/libs/jquery.ui.1.10.0.ie.css' %}" rel="stylesheet">  -->
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->  
@@ -45,7 +50,6 @@
     <script type="text/javascript" src="{% static 'js/libs/angular/media-player.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/bootstrap/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/bootstrap/bootstrap-slider-jquery-comb.js' %}"></script>
-    <!--<script type="text/javascript" src="{% static 'js/libs/jquery-ui-1.10.0.custom.min.js' %}"></script>-->
     <script type="text/javascript" src="{% static 'js/libs/bootstrap/ui-bootstrap-tpls-0.11.2.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular-base64.js' %}"></script>
 
