--- a/dj_pro/dj_pro/static/css/style.css
+++ b/dj_pro/dj_pro/static/css/style.css
@@ -82,3 +82,25 @@ a.remove-tipper {
     height:15px;
     cursor:pointer
 }
+
+
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
