--- a/dj_pro/dj_pro/templates/normal/music_player.html
+++ b/dj_pro/dj_pro/templates/normal/music_player.html
@@ -3,157 +3,118 @@
 </div>    
 <div ng-controller="PlayerController" class="col-md-12 column">
     <audio media-player="audio" data-playlist="playlist"></audio>
+    
 
-    <div ng-controller="user_ctrl" class="col-md-12 column">
-        <div class="col-md-2 column">
-            <span>change music list via user:</span>
-            <select class="form-control" ng-model="owner" ng-change="ownerchange(owner)" ng-options="i.username for i in users"> 
-                <option value="">change music list</option>
-            </select>
-        </div>
-    </div>
+    <div class="col-md-4 column">
+    
+        <div class="col-md-11 column">
+            <div ng-controller="user_ctrl" class="col-md-12 column">
+                <div class="col-md-12 column">
+                    <span>change music list via user:</span>
+                    <select class="form-control" ng-model="owner" ng-change="ownerchange(owner)" ng-options="i.username for i in users"> 
+                        <option value="">change music list</option>
+                    </select>
+                </div>
+            </div>
 
-    <span>image:</span> <img ng-src="((playlist[audio.currentTrack-1].img))" class="img-thumbnail" width="100" height="100">
-    <span>song:((playlist[audio.currentTrack-1].songname.split("/")[5]))</span>
-    <br />current time:((audio.currentTime|MinSecFilter))
-    <br/>
-    <div class="row col-sm-3 column">
-        <div class="slider progress">
-            <div class="slider-bar progress-bar" role="progressbar" style="height:18px;width:((audio.currentTime/audio.duration*100))%;">
-                <span>((audio.currentTime/audio.duration*100|number:0))% </span>
-            </div>
-            <div class="slider-bar progress-bar progress-bar-info" style="height:18px;width: ((audio.loadPercent-audio.currentTime/audio.duration*100))%;">
-                <span>load:((audio.loadPercent))%</span>
+            <span>image:</span> <img ng-src="((playlist[audio.currentTrack-1].img))" class="img-thumbnail" width="100" height="100">
+            <span>song:((playlist[audio.currentTrack-1].songname.split("/")[5]))</span>
+            <br />current time:((audio.currentTime|MinSecFilter))
+            <br/>
+            <div class="row col-sm-12 column">
+                <div class="slider progress">
+                    <div class="slider-bar progress-bar" role="progressbar" style="height:18px;width:((audio.currentTime/audio.duration*100))%;">
+                        <span>((audio.currentTime/audio.duration*100|number:0))% </span>
+                    </div>
+                    <div class="slider-bar progress-bar progress-bar-info" style="height:18px;width: ((audio.loadPercent-audio.currentTime/audio.duration*100))%;">
+                        <span>load:((audio.loadPercent))%</span>
+                    </div>
+                </div>
+                <div class="example" class="col-md-1 column">
+                    <input type="text" class="js-check-change" />
+                    <br/>
+                        <div class="col-md-6">volume:<span id="js-display-change">100</span></div>
+                </div>
             </div>
         </div>
-    </div>
-    <br/>
-    <br/>
+
+        <script type="text/javascript" src="../static/js/libs/slider/powerange.min.js"></script>
+        <br/>
+        <br/>
     
  
-    <div>
-        <span ng-show="audio.playing">Player status: Playing</span>
-        <span ng-show="!audio.playing">Player status: Paused</span>
-        <br />
-        <button ng-click="myprev()" class="btn btn btn-info">Prev</button>
-        <button ng-click="audio.play()" class="btn btn btn-default" ng-show="!audio.playing">Play</button>
-        <button ng-click="audio.pause()" class="btn btn btn-info" ng-show="audio.playing">Stop</button>
-        <button ng-click="mynext()" class="btn btn btn-info">Next</button>
-        <button ng-click="repeat_func()" class="btn btn btn-default" ng-show="!repeat">Repeat Once</button>
-        <button ng-click="repeat_func()" class="btn btn btn-info" ng-show="repeat">Cancel Repeat </button>
-        <button ng-click="goloop()" class="btn btn btn-default" ng-show="!loop">go loop </button>
-        <button ng-click="goloop()" class="btn btn btn-info" ng-show="loop">Cancel loop </button>
-        <br />
-    </div>
-    <div class="row">
-        <div class="row col-md-3 column">
-            <div class="col-md-6 column">
-                <span>time(s):</span>
-                <input type='number' min='1' class="form-control" placeholder="0" ng-init="value=0" ng-change="audio.seek(value)" ng-model="value"/>
-            </div>
-            <div class="col-md-5 column">
-                <span>volume:</span>
-                <input type='number' min='1' max='100' class="form-control" placeholder="100" ng-init="volume=100" ng-change="audio.setVolume(volume/100)" ng-model="volume"/>
-            </div>
+        <div class="col-md-12">
+            <span ng-show="audio.playing">Player status: Playing</span>
+            <span ng-show="!audio.playing">Player status: Paused</span>
+            <br />
+            <button ng-click="myprev()" class="btn btn btn-info">Prev</button>
+            <button ng-click="audio.play()" class="btn btn btn-default" ng-show="!audio.playing">Play</button>
+            <button ng-click="audio.pause()" class="btn btn btn-info" ng-show="audio.playing">Stop</button>
+            <button ng-click="mynext()" class="btn btn btn-info">Next</button>
+            <button ng-click="repeat_func()" class="btn btn btn-default" ng-show="!repeat">Repeat Once</button>
+            <button ng-click="repeat_func()" class="btn btn btn-info" ng-show="repeat">Cancel Repeat </button>
+            <button ng-click="goloop()" class="btn btn btn-default" ng-show="!loop">go loop </button>
+            <button ng-click="goloop()" class="btn btn btn-info" ng-show="loop">Cancel loop </button>
+            <br />
         </div>
-    </div>
-    <br/>
-    <div class="col-md-6 column">
+    <div class="col-md-12 column"><br/></div>
+    <div class="col-md-12 column">
         <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">music list - ((person_num))</button>
         <div collapse="isCollapsed">
             <div class="col-md-5 column">
                 <div class="col-md-12 column" ng-repeat="music in playlist">
                     <span>image: </span> <img ng-src="((music.img))" class="img-thumbnail" width="70" height="70">
-                    <button ng-click="audio.play(music.id-1+1)" class="btn btn btn-default"><span>song:((music.src.split("/")[5]))</span></button>
+                    <button ng-click="audio.play(music.id-1+1)" class="btn btn btn-default"><span>song:((music.songname.split("/")[5]))</span></button>
                 </div>
             </div>
         </div>
     </div>
-
-    <br/>
-    <br/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="col-md-4 column">
+    <div class="col-md-12 column"><br/></div>
     
-    <div class="col-md-10 column">
-        <div ng-controller="user_ctrl" class="col-md-12 column">
-            <div class="col-md-8 column">
-                <span>change music list via user:</span>
-                <select class="form-control" ng-model="owner" ng-change="ownerchange(owner)" ng-options="i.username for i in users"> 
-                    <option value="">change music list</option>
-                </select>
+    <div class="col-md-12 column">
+        <div class="col-md-9 column">
+        <accordion>
+        <accordion-group is-open="status.open">
+        <accordion-heading>Add a song <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+        </accordion-heading>
+            <div class="col-md-12 column" ng-controller="music_ctrl">
+                <form action="/setgame/musics" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <span class="btn btn-primary btn-file">
+                        <label>choose a music</label>
+                        <input type="file" name="music_file" id="" value="file" />
+                    </span>
+                    <div class="col-md-12 column"><br /></div>
+                    <span class="btn btn-primary btn-file">
+                        <label>choose a image</label>
+                        <input type="file" name="music_img" id="" value="image" />
+                    </span>
+                    <div class="col-md-12 column"><br /></div>
+                    <input type="text" name="username" id="" />
+                    <br />
+                    <button type="submit" class="btn btn btn-primary">upload</button>
+                </form>
             </div>
-        </div>
-
-        <span>image:</span> <img ng-src="((playlist[audio.currentTrack-1].img))" class="img-thumbnail" width="100" height="100">
-        <span>song:((playlist[audio.currentTrack-1].songname.split("/")[5]))</span>
-        <br />current time:((audio.currentTime|MinSecFilter))
-        <br/>
-        <div class="row col-sm-12 column">
-            <div class="slider progress">
-                <div class="slider-bar progress-bar" role="progressbar" style="height:18px;width:((audio.currentTime/audio.duration*100))%;">
-                    <span>((audio.currentTime/audio.duration*100|number:0))% </span>
-                </div>
-                <div class="slider-bar progress-bar progress-bar-info" style="height:18px;width: ((audio.loadPercent-audio.currentTime/audio.duration*100))%;">
-                    <span>load:((audio.loadPercent))%</span>
-                </div>
-            </div>
+            </accordion-group>
+            </accordion>
         </div>
     </div>
+    <br/>
+</div>
 
-<div class="col-md-2 column">
-        
-    <section class="content">
-    
-        <div class="example" class="col-md-2 column">
-        
-          <div class="slider-wrapper vertical-wrapper">
-            <input type="text" class="js-vertical" />
-          </div>
-        </div>
-    </section>
-    <script type="text/javascript" src="../static/js/libs/slider/powerange.min.js"></script>
-    <script type="text/javascript">
-  
-        var vert = document.querySelector('.js-vertical');
-        var initVert = new Powerange(vert, { start: 80, vertical: true });
-    </script>
-</div>
-</div>
-    <br/>
-    <br/>
-    
- 
-    <div>
-        <span ng-show="audio.playing">Player status: Playing</span>
-        <span ng-show="!audio.playing">Player status: Paused</span>
-        <br />
-        <button ng-click="myprev()" class="btn btn btn-info">Prev</button>
-        <button ng-click="audio.play()" class="btn btn btn-default" ng-show="!audio.playing">Play</button>
-        <button ng-click="audio.pause()" class="btn btn btn-info" ng-show="audio.playing">Stop</button>
-        <button ng-click="mynext()" class="btn btn btn-info">Next</button>
-        <button ng-click="repeat_func()" class="btn btn btn-default" ng-show="!repeat">Repeat Once</button>
-        <button ng-click="repeat_func()" class="btn btn btn-info" ng-show="repeat">Cancel Repeat </button>
-        <button ng-click="goloop()" class="btn btn btn-default" ng-show="!loop">go loop </button>
-        <button ng-click="goloop()" class="btn btn btn-info" ng-show="loop">Cancel loop </button>
-        <br />
-    </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
