--- a/dj_pro/dj_pro/templates/normal/test.html
+++ b/dj_pro/dj_pro/templates/normal/test.html
@@ -10,13 +10,18 @@
         <div class="example">
 
           <div class="slider-wrapper vertical-wrapper">
-            <input type="text" class="js-vertical" />
+            <input type="text" class="js-check-change" />
+            <div id="js-display-change" class="display-box"></div>
           </div>
         </div>
     </section>
 <script type="text/javascript" src="../static/js/libs/slider/powerange.min.js"></script>
   <script type="text/javascript">
+     var vert = document.querySelector('.js-check-change');
+ var changeInput = new Powerange(vert, { start: 100, decimal: true, min: 0, max: 100, vertical: true });
+ changeInput.onchange = function() {
+ document.getElementById('js-display-change').innerHTML = changeInput.value;
+ $scope.vol = changeInput.value;
+ };
 
-    var vert = document.querySelector('.js-vertical');
-    var initVert = new Powerange(vert, { start: 80, vertical: true });
   </script>
