--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -8,20 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <meta name="description" content="">  
         <meta name="author" content="">
-        <!--link rel="stylesheet/less" href="less/bootstrap.less" type="te xt/css" /-->
-        <!--link rel="stylesheet/less" href="less/responsive.less"   type="text/css" /-->
-        <!--script src="js/less-1.3.3.min.js"></script-->      
         <!--append watch to the browser URL, then refresh the page. -->
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/libs/slider/powerange.css' %}" rel="stylesheet">
-        <!--<link href="{% static 'css/libs/slider.css' %}" rel="stylesheet">-->
+        <link href="{% static 'css/libs/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/libs/powerange.css' %}" rel="stylesheet">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">  
         <link rel="stylesheet" href="{% static 'css/powermain.css' %}" />
         <link href="http://fonts.googleapis.com/css?family=Maven+Pro:400" rel="stylesheet" type="text/css" />   
         <link href="http://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet" type="text/css" />
         <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css" />
-        <!--<link href="{% static 'css/libs/jquery-ui-1.10.0.custom.css' %}" rel="stylesheet">  
-        <link href="{% static 'css/libs/jquery.ui.1.10.0.ie.css' %}" rel="stylesheet">  -->
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->  
         <!--[if lt IE 9]>    
         <script src="js/html5shiv.js"></script>  
