looking for other change

--- a/dj_pro/dj_pro/static/css/style.css
+++ b/dj_pro/dj_pro/static/css/style.css
@@ -104,3 +104,7 @@ a.remove-tipper {
     cursor: inherit;
     display: block;
 }
+
+.addsong {
+  background: url('../images/icon_star.png') 0 0 repeat;
+}
