--- a/dj_pro/dj_pro/templates/normal/choose_script.html
+++ b/dj_pro/dj_pro/templates/normal/choose_script.html
@@ -24,3 +24,8 @@
         </div>
     </div>
 </div>
+
+<!-- need js file:
+js/angular-factory/Excuted_Command.js 
+js/angular-controller/excuted_command_ctrl.js
+--!>
