--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -21,7 +21,7 @@
                     <li class="divider">
                     </li>
                     <li>
-                        <a class='btn btn-default' href="#"> test </a>
+                        <a class='btn btn-default' href="register"> register </a>
                     </li>
                 </ul>
             </li>
@@ -36,7 +36,7 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu btn-block">
-                    <li><a href="((stackoverflowurl))" target="_blank"><button class="btn btn-primary btn-block">stackover!</button></a></li>
+                    <li><a href="((stackoverflowurl))" target="_blank"><button class="btn btn-primary btn-block">stackoverflow!</button></a></li>
                     <li><a href="((searchcodeurl))" target="_blank"><button class="btn btn-primary btn-block">searchcode!</button></a></li>
                 </ul>
             </div>
