--- a/dj_pro/dj_pro/templates/form_user_register.html
+++ b/dj_pro/dj_pro/templates/form_user_register.html
@@ -1,7 +1,14 @@
 {% extends "normal/base.html" %}
+{% load staticfiles %}
+
+{% block title %}welcome register!{% endblock %}
+
 {% block content %}
 {% include "normal/navigation.html" %}
-{% include "normal/user_login.html" %}
+{% include "normal/user_register.html" %}
 {% include "normal/time.html" %}
-{% include "normal/test.html" %}
+{% endblock %}
+
+{% block chosen_js_file %}
+<script type="text/javascript" src="{% static 'js/angular-controller/user_ctrl.js' %}"></script>
 {% endblock %}
