--- a/dj_pro/dj_pro/templates/normal/user_register.html
+++ b/dj_pro/dj_pro/templates/normal/user_register.html
@@ -1,10 +1,21 @@
 <div class="col-md-12 column" ng-controller="user_ctrl">
-    <form ng-submit="UserPost()">
-        {% csrf_token %}
-        <h2 class="form-signin-heading">Please register</h2>
-        <input type="text" name="username" id="" value="" class="form-control" placeholder="Email address" required autofocus ng-model="UserData.username"/>
-        <input type="password" name="password" id="" value="" class="form-control" placeholder="Password" required ng-model="UserData.password"/>
-        <input type="password" name="password" id="" value="" class="form-control" placeholder="Password again" required ng-model="UserData.password"/>
-        <br /><button type="submit" class="btn btn-lg btn-primary btn-block">register</button>
-    </form>
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <form ng-submit="UserPost()">
+            {% csrf_token %}
+            <h2 class="form-signin-heading">Please register</h2>
+            <input type="text" name="username" class="form-control" placeholder="login name" required autofocus ng-model="UserData.username"/>
+            <p class="bg-danger">((user_alert))</p>
+            <input type="password" class="form-control" placeholder="input password" required ng-model="UserData.password"/>
+            <input type="password" class="form-control" placeholder="input password again" required ng-model="UserData.passwordcheck"/>
+            <p class="bg-danger">((password_alert))</p>
+            <br /><button type="submit" class="btn btn-lg btn-primary btn-block">register</button>
+        </form>
+    </div>
+    <div class="col-md-4"></div>
 </div>
+
+<!-- need js file:
+js/angular-factory/User.js  
+js/angular-controller/user_ctrl.js
+--!>
