--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -32,12 +32,12 @@
             {% block content %}{% endblock %}
         </div>
     
-    <!-- put here load faster --!>
-    <!-- here is the main js file that should be load --!>
+    <!-- put here load faster -->
+    <!-- here is the main js file that should be load -->
     <script type="text/javascript" src="{% static 'js/libs/jquery/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular-resource.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/libs/angular/angular-cookies.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/libs/angular/angular-cookies.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular-md5.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/bootstrap/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular-base64.js' %}"></script>
@@ -54,7 +54,7 @@
     <script type="text/javascript" src="{% static 'js/angular-controller/log_cookie.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/angular-controller/checkuser_cookie.js' %}"></script>
 
-    <!-- here is the other page's js --!>
+    <!-- here is the other page's js -->
     {% block chosen_js_file %}{% endblock %}
     </body>
 </html>
