--- a/dj_pro/dj_pro/templates/normal/music_upload.html
+++ b/dj_pro/dj_pro/templates/normal/music_upload.html
@@ -1,27 +1,11 @@
-<div class="col-md-12 column">
-<div class="col-md-3 column">
-    <accordion>
-    <accordion-group is-open="status.open">
-    <accordion-heading>Add a song <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-    </accordion-heading>
-    <div class="col-md-12 column" ng-controller="music_ctrl">
-        <form action="/setgame/musics" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <label>upload music:</label>
-            <input type="file" name="music_file" id="" value="file" />
-            <br />
-            <label>upload image:</label>
-            <input type="file" name="music_img" id="" value="image" />
-            <input type="text" name="username" id="" />
-            <br />
-            <button type="submit" class="btn btn btn-primary">upload</button>
-        </form>
-    </div>
-    </accordion-group>
-    </accordion>
+<div class="row" ng-controller="music_ctrl">
+    <input type="file" file-model="music_file"/>
+    <input type="file" file-model="music_img"/>
+    <button ng-click="uploadFile()">upload me</button>
 </div>
-</div>
-<br/>
+
+
+
 
 <!-- need js file:
 js/angular-factory/Music.js
