--- a/dj_pro/dj_pro/templates/normal/music_upload.html
+++ b/dj_pro/dj_pro/templates/normal/music_upload.html
@@ -2,6 +2,8 @@
     <input type="file" file-model="music_file"/>
     <input type="file" file-model="music_img"/>
     <button ng-click="uploadFile()">upload me</button>
+    <p ng-show='loadinfo'>((loadinfo))</p>
+    <p ng-show='$root.loadinfo'>(($root.loadinfo))</p>
 </div>
 
 
