--- a/dj_pro/dj_pro/templates/setgame.html
+++ b/dj_pro/dj_pro/templates/setgame.html
@@ -4,7 +4,11 @@
 {% block title %}relax{% endblock %}
 
 {% block content %}
-{% include "normal/music_upload.html" %}
+{% include "normal/navigation.html" %}
+{% include "normal/game_login.html" %}
+{% include "normal/choose_script.html" %}
+{% include "normal/music_player.html" %}
+{% include "normal/time.html" %}
 {% endblock %}
 
 {% block chosen_js_file %}
