--- a/dj_pro/dj_pro/templates/normal/user_login.html
+++ b/dj_pro/dj_pro/templates/normal/user_login.html
@@ -17,10 +17,10 @@
         <div class="col-md-4"></div>
         <p>((message))</p>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug 
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>--!>
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
 </div>
 
 
 <!-- need js file:
 js/angular-controller/checkuser_cookie.js 
---!>
+-->
