--- a/dj_pro/dj_pro/templates/normal/servers_detail.html
+++ b/dj_pro/dj_pro/templates/normal/servers_detail.html
@@ -1,5 +1,28 @@
-<div class="col-md-12 column" ng-controller="servers_info_ctrl">
-    <table id="table-sys-detail"></table>
+<div class="col-md-12 column" ng-controller="servers_detail_ctrl">
+    <h3>base:</h3>
+    <div class="alert alert-default" role="alert">
+        <table id="table-detail_base"></table>
+    </div> 
+    <h3>memory:</h3>
+    <div class="alert alert-success" role="alert">
+        <table id="table-detail_memory"></table>
+    </div>
+    <h3>cpu:</h3>
+    <div class="alert alert-success" role="alert">
+        <table id="table-detail_cpu"></table>
+    </div> 
+    <h3>mount:</h3>
+    <div class="alert alert-success" role="alert">    
+        <table id="table-detail_mount"></table>
+    </div> 
+    <h3>netio:</h3>
+    <div class="alert alert-success" role="alert">
+        <table id="table-detail_netio"></table>
+    </div> 
+    <h3>process:</h3>
+    <div class="alert alert-success" role="alert">
+        <table id="table-detail_process"></table>
+    </div> 
 </div>
 
 <!-- need js file
