--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html><html lang="en">
     <head>  
         <meta charset="utf-8">
-
+        <link rel="shortcut icon" type="image/x-icon" href="../../static/images/inutume.gif"/>
         <title>{% block title %}{% endblock %}</title> 
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
