--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 column">
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"> test </a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span> Home </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -13,7 +13,7 @@
 
         <ul class="nav navbar-nav navbar-right" ng-controller='CookieCtrl'>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click="logform_action()">((loginname))<strong class="caret"></strong></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click="logform_action()"><span class="glyphicon glyphicon-user"></span><span> ((loginname))</span><strong class="caret"></strong></a>
                 <ul class="dropdown-menu">
                     <li>
                         <a class='btn btn-default' ng-click="log_action()"> ((log_value)) </a>
@@ -31,13 +31,13 @@
                 <input type="text" class="form-control" name='q' placeholder="search" ng-model="search"/>
             </div>
             <div class="btn-group inline-block">
-                <a href="((googleurl))" target="_blank"><button class="col-sm-8 btn btn-primary"><span>google!</span></button></a>
+                <a href="((googleurl))" target="_blank"><button class="col-sm-8 btn btn-primary"><span>google! </span><span class="glyphicon glyphicon-search"></span></button></a>
                 <button type="button" class="col-sm-2 btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu btn-block">
-                    <li><a href="((stackoverflowurl))" target="_blank"><button class="btn btn-primary btn-block">stackoverflow!</button></a></li>
-                    <li><a href="((searchcodeurl))" target="_blank"><button class="btn btn-primary btn-block">searchcode!</button></a></li>
+                    <li><a href="((stackoverflowurl))" target="_blank"><button class="btn btn-primary btn-block"><span>stackoverflow! </span><span class="glyphicon glyphicon-search"></span></button></a></li>
+                    <li><a href="((searchcodeurl))" target="_blank"><button class="btn btn-primary btn-block"><span>searchcode! </span><span class="glyphicon glyphicon-search"></span></button></a></li>
                 </ul>
             </div>
         </div>
