--- a/dj_pro/dj_pro/templates/normal/servers_info.html
+++ b/dj_pro/dj_pro/templates/normal/servers_info.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 column" ng-controller="servers_info_ctrl">
-    <table id="table-sys-basic"></table>
+    <table id="table-sys-basic" class="success"></table>
 </div>
 
 <!-- need js file
