--- a/dj_pro/dj_pro/templates/normal/music_player.html
+++ b/dj_pro/dj_pro/templates/normal/music_player.html
@@ -12,7 +12,7 @@
                 <div class="col-md-12 column">
                     <span>change music list via user:</span>
                     <select class="form-control" ng-model="owner" ng-change="ownerchange(owner)" ng-options="i.username for i in users"> 
-                        <option value="">change music list</option>
+                        <option value="" class='btn btn-primary'>change music list</option>
                     </select>
                 </div>
             </div>
@@ -49,14 +49,14 @@
             <span ng-show="!audio.playing">Player status: Paused</span>
             <br />
             <div class="col-md-2"></div>
-            <span ng-click="myprev()" class="glyphicon glyphicon-step-backward"></span>
-            <span ng-click="audio.play()" class="glyphicon glyphicon-play" ng-show="!audio.playing"></span>
-            <span ng-click="audio.pause()" class="glyphicon glyphicon-pause" ng-show="audio.playing"></span>
-            <span ng-click="mynext()" class="glyphicon glyphicon-step-forward"></span>
-            <span ng-click="repeat_func()" class="glyphicon glyphicon-arrow-right" ng-show="!repeat"></span>
-            <span ng-click="repeat_func()" class="glyphicon glyphicon-repeat" ng-show="repeat"></span>
-            <span ng-click="goloop()" class="glyphicon glyphicon-circle-arrow-right" ng-show="!loop"></span>
-            <span ng-click="goloop()" class="glyphicon glyphicon-retweet" ng-show="loop"></span>
+            <span ng-click="myprev()" class="handpointer glyphicon glyphicon-step-backward"></span>
+            <span ng-click="audio.play()" class="handpointer glyphicon glyphicon-play" ng-show="!audio.playing"></span>
+            <span ng-click="audio.pause()" class="handpointer glyphicon glyphicon-pause" ng-show="audio.playing"></span>
+            <span ng-click="mynext()" class="handpointer glyphicon glyphicon-step-forward"></span>
+            <span ng-click="repeat_func()" class="handpointer glyphicon glyphicon-arrow-right" ng-show="!repeat"></span>
+            <span ng-click="repeat_func()" class="handpointer glyphicon glyphicon-repeat" ng-show="repeat"></span>
+            <span ng-click="goloop()" class="handpointer glyphicon glyphicon-circle-arrow-right" ng-show="!loop"></span>
+            <span ng-click="goloop()" class="handpointer glyphicon glyphicon-retweet" ng-show="loop"></span>
             <br />
         </div>
     <div class="col-md-12 column"><br/></div>
@@ -77,9 +77,8 @@
         <div class="col-md-9 column">
         <accordion>
         <accordion-group is-open="status.open">
-        <accordion-heading>Add a song <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-        </accordion-heading>
-            <div class="col-md-12 column" ng-controller="music_ctrl">
+        <accordion-heading>Add a song <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i></accordion-heading>
+            <div class="col-md-12 column addsongbg" ng-controller="music_ctrl" >
                         <label>choose a music</label>
                         <input type="file" file-model="music_file"/>
                     <div class="col-md-12 column"><br /></div>
