--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -34,6 +34,7 @@
     
     <!-- put here load faster -->
     <!-- here is the main js file that should be load -->
+    <script src="{% static 'less/less.js' %}" type="text/javascript"></script>
     <script type="text/javascript" src="{% static 'js/libs/jquery/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/libs/angular/angular-resource.js' %}"></script>
