change_well_music_js

--- a/dj_pro/dj_pro/templates/test.html
+++ b/dj_pro/dj_pro/templates/test.html
@@ -8,5 +8,8 @@
 {% endblock %}
 
 {% block chosen_js_file %}
+<link href="{% static 'css/test.css' %}" rel="stylesheet"> 
 <script type="text/javascript" src="{% static 'js/angular-controller/jquery.test.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/angular-controller/Sound2.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/libs/angular/angular-soundmanager2-change.js' %}"></script>
 {% endblock %}
