next_fix_repeat

--- a/dj_pro/dj_pro/templates/setgame.html
+++ b/dj_pro/dj_pro/templates/setgame.html
@@ -12,6 +12,9 @@
 {% endblock %}
 
 {% block chosen_js_file %}
+<script type="text/javascript" src="{% static 'js/angular-controller/Sound2.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/libs/angular/angular-soundmanager2-change.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'js/libs/bootstrap/bootstrap-slider-jquery-comb.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'js/angular-factory/Music.js' %}"></script>
