--- a/dj_pro/dj_pro/templates/normal/music_player.html
+++ b/dj_pro/dj_pro/templates/normal/music_player.html
@@ -1,9 +1,8 @@
 <div class="col-md-12 column">
     <h3>BGM:</h3>
 </div>    
-<div ng-controller="PlayerController" class="col-md-12 column">
-    <audio media-player="audio" data-playlist="playlist"></audio>
-    
+<div ng-controller="Sound2_Ctrl" class="col-md-12 column">
+    <sound-manager></sound-manager>
 
     <div class="col-md-4 column">
     
@@ -17,18 +16,15 @@
                 </div>
             </div>
 
-            <img ng-src="((playlist[audio.currentTrack-1].img))" class="img-thumbnail" width="100" height="100">
-            <span class="glyphicon glyphicon-music"></span><span>((playlist[audio.currentTrack-1].songname.split("/")[5].split(".")[0]))</span>
-            <br /><span class="glyphicon glyphicon-time"></span><span>((audio.currentTime|MinSecFilter))&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <img ng-src="((currentPlaying.img))" class="img-thumbnail" width="100" height="100">
+            <span class="glyphicon glyphicon-music"></span><span>((currentPlaying.img_title))</span>
+            <br /><span class="glyphicon glyphicon-time"></span><span>(( currentPostion )) / (( currentDuration )) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <span class="glyphicon glyphicon-volume-down"></span><span id="js-display-change">100</span>
             <br/>
             <div class="row col-sm-12 column">
-                <div class="slider progress">
-                    <div class="slider-bar progress-bar" role="progressbar" style="height:18px;width:((audio.currentTime/audio.duration*100))%;">
-                        <span>((audio.currentTime/audio.duration*100|number:0))% </span>
-                    </div>
-                    <div class="slider-bar progress-bar progress-bar-info" style="height:18px;width: ((audio.loadPercent-audio.currentTime/audio.duration*100))%;">
-                        <span>load:((audio.loadPercent))%</span>
+                <div seek-track class="slider progress">
+                    <div  class="slider-bar progress-bar" role="progressbar" style="height:18px;width:((progress))%;">
+                        <span>((progress|number:0))% </span>
                     </div>
                 </div>
                 <div class="example" class="col-md-1 column">
@@ -45,18 +41,18 @@
  
         <div class="col-md-12">
             <div class="col-md-2"></div>
-            <span ng-show="audio.playing">Player status: Playing</span>
-            <span ng-show="!audio.playing">Player status: Paused</span>
+            <span ng-show="isPlaying">Player status: Playing</span>
+            <span ng-show="!isPlaying">Player status: Paused</span>
             <br />
             <div class="col-md-2"></div>
-            <span ng-click="myprev()" class="handpointer glyphicon glyphicon-step-backward"></span>
-            <span ng-click="audio.play()" class="handpointer glyphicon glyphicon-play" ng-show="!audio.playing"></span>
-            <span ng-click="audio.pause()" class="handpointer glyphicon glyphicon-pause" ng-show="audio.playing"></span>
-            <span ng-click="mynext()" class="handpointer glyphicon glyphicon-step-forward"></span>
-            <span ng-click="repeat_func()" class="handpointer glyphicon glyphicon-arrow-right" ng-show="!repeat"></span>
-            <span ng-click="repeat_func()" class="handpointer glyphicon glyphicon-repeat" ng-show="repeat"></span>
-            <span ng-click="goloop()" class="handpointer glyphicon glyphicon-circle-arrow-right" ng-show="!loop"></span>
-            <span ng-click="goloop()" class="handpointer glyphicon glyphicon-retweet" ng-show="loop"></span>
+            <span prev-track class="handpointer glyphicon glyphicon-step-backward"></span>
+            <span play-music class="handpointer glyphicon glyphicon-play" ng-show="!isPlaying"></span>
+            <span pause-music class="handpointer glyphicon glyphicon-pause" ng-show="isPlaying"></span>
+            <span next-track class="handpointer glyphicon glyphicon-step-forward"></span>
+            <span ng-click="replayone()" class="handpointer glyphicon glyphicon-arrow-right" ng-show="!replay"></span>
+            <span ng-click="replayone()" class="handpointer glyphicon glyphicon-repeat" ng-show="replay"></span>
+            <span repeat-music class="handpointer glyphicon glyphicon-circle-arrow-right" ng-show="!repeat"></span>
+            <span repeat-music class="handpointer glyphicon glyphicon-retweet" ng-show="repeat"></span>
             <br />
         </div>
     <div class="col-md-12 column"><br/></div>
@@ -64,9 +60,9 @@
         <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">music list - ((person_num))</button>
         <div collapse="isCollapsed">
             <div class="col-md-5 column">
-                <div class="col-md-12 column" ng-repeat="music in playlist">
-                    <img ng-src="((music.img))" class="img-thumbnail" width="70" height="70">
-                    <button ng-click="audio.play(music.id-1+1)" class="btn btn btn-info"><span class="glyphicon glyphicon-headphones"> ((music.songname.split("/")[5].split(".")[0]))</span></button>
+                <div class="col-md-12 column" ng-repeat="song in songs">
+                    <img ng-src="((song.img))" class="img-thumbnail" width="70" height="70">
+                    <button play-from-playlist="song" class="btn btn btn-info"><span class="glyphicon glyphicon-headphones"> ((song.title))</span></button>
                 </div>
             </div>
         </div>
