--- a/dj_pro/dj_pro/templates/test.html
+++ b/dj_pro/dj_pro/templates/test.html
@@ -4,23 +4,12 @@
 {% block title %}test{% endblock %}
 
 {% block content %}
-{% include "normal/navigation.html" %}
-{% include "normal/music_player.html" %}
+{% include "normal/test.html" %}
 {% endblock %}
 
 {% block chosen_js_file %}
-<script type="text/javascript" src="{% static 'js/angular-controller/Sound2.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/libs/angular/angular-soundmanager2-change.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'js/angular-factory/Music.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-factory/Game_Script.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-factory/Excuted_Command.js' %}"></script>
-
-<script type="text/javascript" src="{% static 'js/angular-controller/game_script_ctrl.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-controller/excuted_command_ctrl.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-controller/user_ctrl.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-controller/music_ctrl.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-controller/PlayerController.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/angular-controller/game_login.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/libs/bootstrap/Chart.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/angular-controller/jquery.test.js' %}"></script>
 {% endblock %}
                                                                                                                 
