--- a/dj_pro/dj_pro/templates/normal/test.html
+++ b/dj_pro/dj_pro/templates/normal/test.html
@@ -1,73 +1,20 @@
-
-<div ng-controller="Sound2_Ctrl">
-    <div class="row">
-        <div class="col-md-12">
-
-            <h5>Songs</h5>
-            <ul>
-                <li ng-repeat="song in songs">
-                    <button music-player="play" add-song="song">(( song.title ))</button>
-                    <button music-player add-song="song">+</button>
-                </li>
-            </ul>
-
-            <button play-all="songs">Play all</button>
-
-        </div>
-    </div>
-
-    <hr />
-
-    <div class="row">
-        <div class="col-md-12">
-            <!-- init soundManager2 player -->
-            <sound-manager></sound-manager>
-
-            <p>
-                Currently Playing: (( currentPlaying.title )) by (( currentPlaying.artist )) (( currentPostion )) / (( currentDuration ))
-            </p>
-
-            <div class="seekBase" seek-track>
-                <div class="seekLoad" ng-style="{width : ( progress + '%' ) }"></div>
-            </div>
-            <br />
-            <button play-music>Play</button>
-            -
-            <button pause-music>Pause</button>
-            -
-            <button stop-music>Stop</button>
-            -
-            <button repeat-music>Repeat (( repeat ))</button>
-
-            Is Playing: (( isPlaying ))
-            <br/>
-            <br/>
-            Volume: (( volume ))
-            -
-            <music-volume>
-            </music-volume>
-            -
-            <button mute-music>Mute (( mute ))</button>
-            <br/>
-            <br/>
-            <button prev-track>Prev Track</button>
-            -
-            <button next-track>Next Track</button>
-            -
-            <button clear-playlist>Clear Playlist</button>
-            <br/>
-            <br/>
-            <h5>Playlist</h5>
-            <ul>
-                <li ng-repeat="song in playlist">
-                    <a play-from-playlist="song">(( song.title ))</a>
-                    -
-                    <a remove-from-playlist="song" data-index="(($index))">
-                        <small>(remove)</small>
-                    </a>
-                    <span ng-if="currentPlaying.id == song.id"> - (current)</span>
-                </li>
-            </ul>
-        </div>
-    </div>
+<div ng-controller='jquery_test_ctrl'>
+<div class='col-md-12 column'>
+    <canvas id="myChart" width="400" height="400"></canvas>
+</div>
+<div class='col-md-12 column'>
+    <canvas id="ChartBar" width="400" height="400"></canvas>
+</div>
+<div class='col-md-12 column'>
+    <canvas id="RadarBar" width="400" height="400"></canvas>
+</div>
+<div class='col-md-12 column'>
+    <canvas id="Polar" width="400" height="400"></canvas>
+</div>
+<div class='col-md-12 column'>
+    <canvas id="Pie" width="400" height="400"></canvas>
+</div>
+<div class='col-md-12 column'>
+    <canvas id="Dough" width="400" height="400"></canvas>
+</div>
 </div>
